// Copyright 2021 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


enum CloudbuildAlphaWorkerPoolStateEnum {
  CloudbuildAlphaWorkerPoolStateEnumNO_VALUE_DO_NOT_USE = 0;
  CloudbuildAlphaWorkerPoolStateEnumSTATE_UNSPECIFIED = 1;
  CloudbuildAlphaWorkerPoolStateEnumPENDING = 2;
  CloudbuildAlphaWorkerPoolStateEnumAPPROVED = 3;
  CloudbuildAlphaWorkerPoolStateEnumREJECTED = 4;
  CloudbuildAlphaWorkerPoolStateEnumCANCELLED = 5;
}

message CloudbuildAlphaWorkerPool {
  string name = 1;
  string create_time = 2;
  string update_time = 3;
  string delete_time = 4;
  CloudbuildAlphaWorkerPoolStateEnum state = 5;
  CloudbuildAlphaWorkerPoolWorkerConfig worker_config = 6;
  CloudbuildAlphaWorkerPoolNetworkConfig network_config = 7;
  string project = 8;
  string location = 9;
}

message CloudbuildAlphaWorkerPoolWorkerConfig {
  string machine_type = 1;
  int64 disk_size_gb = 2;
  bool no_external_ip = 3;
}

message CloudbuildAlphaWorkerPoolNetworkConfig {
  string peered_network = 1;
}

message ApplyCloudbuildAlphaWorkerPoolRequest {
  CloudbuildAlphaWorkerPool resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteCloudbuildAlphaWorkerPoolRequest {
  string service_account_file = 1;
  CloudbuildAlphaWorkerPool resource = 2;
}

message ListCloudbuildAlphaWorkerPoolRequest {
  string service_account_file = 1;
  string Project = 2;
  string Location = 3;
}

message ListCloudbuildAlphaWorkerPoolResponse {
  repeated CloudbuildAlphaWorkerPool items = 1;
}

service CloudbuildAlphaWorkerPoolService {
  rpc ApplyCloudbuildAlphaWorkerPool(ApplyCloudbuildAlphaWorkerPoolRequest) returns (CloudbuildAlphaWorkerPool);
  rpc DeleteCloudbuildAlphaWorkerPool(DeleteCloudbuildAlphaWorkerPoolRequest) returns (google.protobuf.Empty);
  rpc ListCloudbuildAlphaWorkerPool(ListCloudbuildAlphaWorkerPoolRequest) returns (ListCloudbuildAlphaWorkerPoolResponse);
}
